# fastapi-ca

./: FixError.md  README.md  alembic.ini  config.py  containers.py  database.py  database_models.py  main.py  pyproject.toml
common/: auth.py
example/ch06_02/: async_ex.py  sync_ex.py
example/ch08_03/: env_ex.py
example/ch10_01/: background_task.py
example/ch10_02/: celery_result.py  celery_task.py  deserialize_result.py
example/ch11_01/: context_sample.py  context_test.py  middleware.py
migrations/: env.py
migrations/versions/: 2023_11_09_0832-382ab0927111_add_user_table.py
note/application/: note_service.py
note/infra/repository/: note_repo.py
user/application/: user_service.py
user/domain/: user.py
user/domain/repository/: user_repo.py
user/infra/database/: user_repo.py
user/infra/db_models/: user.py
user/infra/repository/: user_repo.py
user/interface/controllers/: user_controller.py
