[tool.poetry]
name = "fastapi-ca"
version = "0.1.0"
description = ""
authors = ["dextto <dexter.haan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
py-ulid = "^1.0.3"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
sqlalchemy = "^2.0.25"
mysqlclient = "^2.2.4"
alembic = "^1.13.1"
dependency-injector = "^4.41.0"
pydantic = {extras = ["email"], version = "^2.5.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
